# MFR-Framework

./: CMakeCache.txt  CMakeLists.txt  Makefile  MapFunctions.cbp  cmake_install.cmake  main.cpp
Recipe/: Recipe.cpp  Recipe.h  RecipeItem.cpp  RecipeItem.h
Serialize/: Serialize.cpp  Serialize.h
SharedLibraries/: mapFunctions.cpp
SharedMemory/: Pointer.cpp  Pointer.h  PointerList.cpp  PointerList.h  SharedMemoryGenerator.cpp  SharedMemoryGenerator.h
SharedMemory/resources/: SharedMemoryData.cpp  SharedMemoryData.h
